--- a/workshops/Cleaning_NSFG_Pregnancy_Data.ipynb
+++ b/workshops/Cleaning_NSFG_Pregnancy_Data.ipynb
@@ -318,7 +318,10 @@
     "    'howpreg_n': pd.Int32Dtype(),\n",
     "    'howpreg_p': pd.Int32Dtype(),\n",
     "    'nowprgdk': pd.Int32Dtype(),\n",
-    "    'multbrth': pd.Int8Dtype()\n",
+    "    'multbrth': pd.Int8Dtype(),\n",
+    "    'birthwgt_lb': pd.Int32Dtype(),\n",
+    "    'birthwgt_oz': pd.Int32Dtype(),\n",
+    "    'birthord': pd.Int32Dtype()\n",
     "})"
    ]
   },
@@ -393,6 +396,12 @@
    "id": "8dae24ea-76c6-4ec9-b32c-69cf39552f16",
    "metadata": {},
    "source": [
+    "## Interpretation\n",
+    "\n",
+    "To work with data effectively, you have to think on two levels at the same time: the level of statistics and the level of context.\n",
+    "\n",
+    "As an example, let’s look at the sequence of outcomes for a few respondents. Because of the way the data files are organized, we have to do some processing to collect the pregnancy data for each respondent. Here’s a function that does that:\n",
+    "\n",
     "validate that the pregnum column in `resp` matches the number of entries in `preg`"
    ]
   },
@@ -404,7 +413,8 @@
    "outputs": [],
    "source": [
     "def make_preg_map(df: pd.DataFrame) -> DefaultDict[int, List[int]]:\n",
-    "    \"\"\"Make a map from caseid to list of preg indices.\n",
+    "    \"\"\"\n",
+    "    Make a map from caseid to list of preg indices.\n",
     "\n",
     "    df: DataFrame\n",
     "\n",
