--- a/02_Distributions.ipynb
+++ b/02_Distributions.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "live = nsfg.read_fem_preg().query('outcome == 1')"
+    "live = nsfg.read_live_fem_preg()"
    ]
   },
   {
