Extended PMF implementation

--- a/03_Probability_Mass_Functions.ipynb
+++ b/03_Probability_Mass_Functions.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "from typing import Dict, List, Tuple\n",
-    "import itertools"
+    "import itertools\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -452,6 +453,22 @@
     "        '''\n",
     "        return sum(p * x for x, p in self.items())\n",
     "    \n",
+    "    def var(self) -> np.float64:\n",
+    "        \"\"\"\n",
+    "        Computes the variance of a PMF.\n",
+    "\n",
+    "        mu: the point around which the variance is computed;\n",
+    "                if omitted, computes the mean\n",
+    "\n",
+    "        returns: float variance\n",
+    "        \"\"\"\n",
+    "        mu = self.mean()\n",
+    "        return sum(p * (x-mu)**2 for x, p in self.items())\n",
+    "    \n",
+    "    def mode(self):\n",
+    "        # returns the value with the highest probability\n",
+    "        return self.series.index[np.argmax(remaining.series.values)]\n",
+    "    \n",
     "    def arange(self, increment=1) -> np.array:\n",
     "        # include missing\n",
     "        return np.arange(self._min, self._max+1, increment)\n",
@@ -474,8 +491,129 @@
     "    def copy(self):\n",
     "        return self.__class__(self._series.copy(), normalize=False)\n",
     "    \n",
+    "    def as_dict(self) -> dict:\n",
+    "        return dict(zip(self._series.index, self._series.values))\n",
+    "    \n",
+    "    def add(self, other: PMF) -> PMF:\n",
+    "        \"\"\"Computes the Pmf of the sum of values drawn from self and other.\n",
+    "\n",
+    "        other: another Pmf\n",
+    "\n",
+    "        returns: new Pmf\n",
+    "        \"\"\"\n",
+    "        pmf = {}\n",
+    "        for v1, p1 in self.items():\n",
+    "            for v2, p2 in other.items():\n",
+    "                val = v1 + v2\n",
+    "                if val not in pmf:\n",
+    "                    pmf[val] = 0\n",
+    "                pmf[val] += p1 * p2\n",
+    "        return self.__class__.from_dict(pmf)\n",
+    "    \n",
+    "    def sub(self, other: PMF) -> PMF:\n",
+    "        \"\"\"Computes the Pmf of the diff of values drawn from self and other.\n",
+    "\n",
+    "        other: another Pmf\n",
+    "\n",
+    "        returns: new Pmf\n",
+    "        \"\"\"\n",
+    "        pmf = {}\n",
+    "        for v1, p1 in self.Items():\n",
+    "            for v2, p2 in other.Items():\n",
+    "                val = v1 - v2\n",
+    "                if val not in pmf:\n",
+    "                    pmf[val] = 0\n",
+    "                pmf[val] += p1 * p2\n",
+    "        return self.__class__.from_dict(pmf)\n",
+    "    \n",
+    "    def add_constant(self, value) -> PMF:\n",
+    "        \"\"\"Computes the Pmf of the sum a constant and values from self.\n",
+    "\n",
+    "        value: a number\n",
+    "\n",
+    "        returns: new Pmf\n",
+    "        \"\"\"\n",
+    "        if value == 0:\n",
+    "            return self.copy()\n",
+    "\n",
+    "        pmf = {}\n",
+    "        for v1, p1 in self.items():\n",
+    "            pmf[v1 + value] = p1\n",
+    "        return self.__class__.from_dict(pmf)\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        \"\"\"Computes the Pmf of the diff of values drawn from self and other.\n",
+    "\n",
+    "        other: another Pmf\n",
+    "\n",
+    "        returns: new Pmf\n",
+    "        \"\"\"\n",
+    "        if isinstance(other, type(self)):\n",
+    "            # its another pmf - subtract the two\n",
+    "            return self.sub(other)\n",
+    "        else:\n",
+    "            return self.add_constant(-other)\n",
+    "    \n",
+    "    def __getitem__(self, x) -> np.float:\n",
+    "        if x in self._series:\n",
+    "            return self._series[x]\n",
+    "        return 0\n",
+    "    \n",
+    "    def __setitem__(self, x, p):\n",
+    "        if x in self._series:\n",
+    "            self._series[x] = p\n",
+    "    \n",
     "    def __str__(self):\n",
     "        return str(self._series)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing PMFs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prob_greater(pmf1: PMF, pmf2: PMF) -> float:\n",
+    "    \"\"\"Probability that a value from pmf1 is less than a value from pmf2.\n",
+    "\n",
+    "    Args:\n",
+    "        pmf1: Pmf object\n",
+    "        pmf2: Pmf object\n",
+    "\n",
+    "    Returns:\n",
+    "        float probability\n",
+    "    \"\"\"\n",
+    "    total = 0\n",
+    "    for v1, p1 in pmf1.items():\n",
+    "        for v2, p2 in pmf2.items():\n",
+    "            if v1 > v2:\n",
+    "                total += p1 * p2\n",
+    "    return total\n",
+    "\n",
+    "\n",
+    "def prob_equal(pmf1: PMF, pmf2: PMF):\n",
+    "    \"\"\"Probability that a value from pmf1 equals a value from pmf2.\n",
+    "\n",
+    "    Args:\n",
+    "        pmf1: Pmf object\n",
+    "        pmf2: Pmf object\n",
+    "\n",
+    "    Returns:\n",
+    "        float probability\n",
+    "    \"\"\"\n",
+    "    total = 0\n",
+    "    for v1, p1 in pmf1.items():\n",
+    "        for v2, p2 in pmf2.items():\n",
+    "            if v1 == v2:\n",
+    "                total += p1 * p2\n",
+    "    return total"
    ]
   },
   {
@@ -563,6 +701,92 @@
    "outputs": [],
    "source": [
     "pmf.as_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding PMFs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding two PMFs can be thought of as a merge - values in the other that are not present are added, otherwise the probabilities are added together"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Dungeons and Dragons, the amount of damage a goblin can withstand is the sum of two six-sided dice. The amount of damage you inflict with a short sword is determined by rolling one six-sided die.\n",
+    "\n",
+    "Suppose you are fighting a goblin and you have already inflicted 4 points of damage. What is your probability of defeating the goblin with your next successful attack?\n",
+    "\n",
+    "(Where \"defeat\" means that the goblin can withstand no more damage.)\n",
+    "\n",
+    "Note: You can solve this problem with paper and pencil or computationally; you can solve it using Bayes's Theorem, combinatorics, or using the Pmf class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmf = PMF.from_seq(range(1,7))\n",
+    "pmf.series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twice = pmf.add(pmf)\n",
+    "twice.series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twice[2] = 0\n",
+    "twice[3] = 0\n",
+    "twice[4] = 0\n",
+    "twice.normalize()\n",
+    "twice.series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaining = twice - 4\n",
+    "remaining.series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob_greater(pmf, remaining) + prob_equal(pmf, remaining)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NSFG"
    ]
   },
   {
