Added workshop on effect sizes and a concept explaining ROC curves

--- a/03_Probability_Mass_Functions.ipynb
+++ b/03_Probability_Mass_Functions.ipynb
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result is a Probability Mass Function (PMF)."
+    "The result is a Probability Mass Function (Pmf)."
    ]
   },
   {
@@ -180,8 +180,8 @@
     ");\n",
     "p.set(\n",
     "    xlabel = 'Birth weight (lbs)',\n",
-    "    ylabel = 'PMF',\n",
-    "    title = 'PMF of birth weight'\n",
+    "    ylabel = 'Pmf',\n",
+    "    title = 'Pmf of birth weight'\n",
     ");"
    ]
   },
@@ -201,7 +201,7 @@
     "p = sns.histplot(live.birthwgt_lb, discrete=True, stat='probability')\n",
     "p.set(\n",
     "    xlabel = 'Birth weight (lbs)',\n",
-    "    title = 'PMF of birth weights'\n",
+    "    title = 'Pmf of birth weights'\n",
     ");"
    ]
   },
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PMF:\n",
+    "class Pmf:\n",
     "    \n",
     "    @classmethod\n",
     "    def from_seq(cls, values: List[int]):\n",
@@ -395,7 +395,7 @@
     "        \n",
     "    def normalize(self):\n",
     "        '''\n",
-    "        Normalizes this PMF so the sum of all probabilities is 1\n",
+    "        Normalizes this Pmf so the sum of all probabilities is 1\n",
     "        '''\n",
     "        # divide through by the sum of the values\n",
     "        self._series /= np.sum(self._series)\n",
@@ -455,7 +455,7 @@
     "    \n",
     "    def var(self) -> np.float64:\n",
     "        \"\"\"\n",
-    "        Computes the variance of a PMF.\n",
+    "        Computes the variance of a Pmf.\n",
     "\n",
     "        mu: the point around which the variance is computed;\n",
     "                if omitted, computes the mean\n",
@@ -494,7 +494,7 @@
     "    def as_dict(self) -> dict:\n",
     "        return dict(zip(self._series.index, self._series.values))\n",
     "    \n",
-    "    def add(self, other: PMF) -> PMF:\n",
+    "    def add(self, other: Pmf) -> Pmf:\n",
     "        \"\"\"Computes the Pmf of the sum of values drawn from self and other.\n",
     "\n",
     "        other: another Pmf\n",
@@ -510,7 +510,7 @@
     "                pmf[val] += p1 * p2\n",
     "        return self.__class__.from_dict(pmf)\n",
     "    \n",
-    "    def sub(self, other: PMF) -> PMF:\n",
+    "    def sub(self, other: Pmf) -> Pmf:\n",
     "        \"\"\"Computes the Pmf of the diff of values drawn from self and other.\n",
     "\n",
     "        other: another Pmf\n",
@@ -518,15 +518,15 @@
     "        returns: new Pmf\n",
     "        \"\"\"\n",
     "        pmf = {}\n",
-    "        for v1, p1 in self.Items():\n",
-    "            for v2, p2 in other.Items():\n",
+    "        for v1, p1 in self.items():\n",
+    "            for v2, p2 in other.items():\n",
     "                val = v1 - v2\n",
     "                if val not in pmf:\n",
     "                    pmf[val] = 0\n",
     "                pmf[val] += p1 * p2\n",
     "        return self.__class__.from_dict(pmf)\n",
     "    \n",
-    "    def add_constant(self, value) -> PMF:\n",
+    "    def add_constant(self, value) -> Pmf:\n",
     "        \"\"\"Computes the Pmf of the sum a constant and values from self.\n",
     "\n",
     "        value: a number\n",
@@ -571,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparing PMFs"
+    "Comparing Pmfs"
    ]
   },
   {
@@ -580,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prob_greater(pmf1: PMF, pmf2: PMF) -> float:\n",
+    "def prob_greater(pmf1: Pmf, pmf2: Pmf) -> float:\n",
     "    \"\"\"Probability that a value from pmf1 is less than a value from pmf2.\n",
     "\n",
     "    Args:\n",
@@ -598,7 +598,7 @@
     "    return total\n",
     "\n",
     "\n",
-    "def prob_equal(pmf1: PMF, pmf2: PMF):\n",
+    "def prob_equal(pmf1: Pmf, pmf2: Pmf):\n",
     "    \"\"\"Probability that a value from pmf1 equals a value from pmf2.\n",
     "\n",
     "    Args:\n",
@@ -623,7 +623,7 @@
    "outputs": [],
    "source": [
     "values = [1, 2, 2, 3, 5]\n",
-    "pmf = PMF.from_seq(values)\n",
+    "pmf = Pmf.from_seq(values)\n",
     "pmf.series"
    ]
   },
@@ -707,14 +707,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding PMFs"
+    "### Adding Pmfs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adding two PMFs can be thought of as a merge - values in the other that are not present are added, otherwise the probabilities are added together"
+    "Adding two Pmfs can be thought of as a merge - values in the other that are not present are added, otherwise the probabilities are added together"
    ]
   },
   {
@@ -736,7 +736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmf = PMF.from_seq(range(1,7))\n",
+    "pmf = Pmf.from_seq(range(1,7))\n",
     "pmf.series"
    ]
   },
@@ -793,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's the PMF of pregnancy length for live births."
+    "Here's the Pmf of pregnancy length for live births."
    ]
   },
   {
@@ -811,7 +811,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmf = PMF.from_seq(live.prglngth)"
+    "pmf = Pmf.from_seq(live.prglngth)"
    ]
   },
   {
@@ -950,8 +950,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_pmf = PMF.from_seq(live.prglngth[live.birthcat=='Firsts'].values)\n",
-    "other_pmf = PMF.from_seq(live.prglngth[live.birthcat=='Others'].values)"
+    "first_pmf = Pmf.from_seq(live.prglngth[live.birthcat=='Firsts'].values)\n",
+    "other_pmf = Pmf.from_seq(live.prglngth[live.birthcat=='Others'].values)"
    ]
   },
   {
@@ -998,7 +998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Biasing and unbiasing PMFs\n",
+    "### Biasing and unbiasing Pmfs\n",
     "\n",
     "Here's the example in the book showing operations we can perform with `Pmf` objects.\n",
     "\n",
@@ -1030,7 +1030,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmf = PMF.from_dict(d)\n",
+    "pmf = Pmf.from_dict(d)\n",
     "pmf.as_dataframe()"
    ]
   },
@@ -1038,7 +1038,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function computes the biased PMF we would get if we surveyed students and asked about the size of the classes they are in."
+    "This function computes the biased Pmf we would get if we surveyed students and asked about the size of the classes they are in."
    ]
   },
   {
@@ -1047,7 +1047,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bias_pmf(pmf: PMF) -> PMF:\n",
+    "def bias_pmf(pmf: Pmf) -> Pmf:\n",
     "    new_pmf = pmf.copy()\n",
     "\n",
     "    for x, p in pmf.items():\n",
@@ -1239,7 +1239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def unbias_pmf(pmf: PMF) -> PMF:\n",
+    "def unbias_pmf(pmf: Pmf) -> Pmf:\n",
     "    new_pmf = pmf.copy()\n",
     "\n",
     "    for x, p in pmf.items():\n",
@@ -1254,7 +1254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can unbias the biased PMF:"
+    "We can unbias the biased Pmf:"
    ]
   },
   {
@@ -1342,7 +1342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmf = PMF.from_seq(resp.numkdhh)\n",
+    "pmf = Pmf.from_seq(resp.numkdhh)\n",
     "pmf.mean()"
    ]
   },
@@ -1455,7 +1455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PMF.from_seq(diffs).mean()"
+    "Pmf.from_seq(diffs).mean()"
    ]
   },
   {
@@ -1473,7 +1473,7 @@
     "\n",
     "So where does the bias come from? During my time on the course, the chance of overtaking a runner, or being overtaken, is proportional to the difference in our speeds. I am more likely to catch a slow runner, and more likely to be caught by a fast runner. But runners at the same speed are unlikely to see each other.\n",
     "\n",
-    "Write a function called `observed_pmf` that takes a `PMF` representing the actual distribution of runners’ speeds, and the speed of a running observer, and returns a new `PMF` representing the distribution of runners’ speeds as seen by the observer.\n",
+    "Write a function called `observed_pmf` that takes a `Pmf` representing the actual distribution of runners’ speeds, and the speed of a running observer, and returns a new `Pmf` representing the distribution of runners’ speeds as seen by the observer.\n",
     "\n",
     "To test your function, you can use the results from the James Joyce Ramble 10K in Dedham MA and converts the pace of each runner to mph.\n",
     "\n",
@@ -1514,8 +1514,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pmf = PMF.from_seq(np.round(df.mph, 1))\n",
-    "pmf = PMF.from_seq(df.speed)"
+    "# pmf = Pmf.from_seq(np.round(df.mph, 1))\n",
+    "pmf = Pmf.from_seq(df.speed)"
    ]
   },
   {
@@ -1544,7 +1544,7 @@
    "source": [
     "# Solution\n",
     "\n",
-    "def observed_pmf(pmf: PMF, speed: float) -> PMF:\n",
+    "def observed_pmf(pmf: Pmf, speed: float) -> Pmf:\n",
     "    \"\"\"Returns a new Pmf representing speeds observed at a given speed.\n",
     "\n",
     "    The chance of observing a runner is proportional to the difference\n",
