Added chapter on modelling distributions

--- a/04_Cumulative_Distribution_Functions.ipynb
+++ b/04_Cumulative_Distribution_Functions.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "from typing import List, Tuple\n",
     "from collections import Counter\n",
     "import bisect"
    ]
@@ -763,12 +763,64 @@
     "        # get the values they correspond to\n",
     "        return self.values(ps)\n",
     "    \n",
+    "    def mean(self) -> float:\n",
+    "        \"\"\"\n",
+    "        Computes the mean of a CDF.\n",
+    "        \n",
+    "        sum(x * diff(p))\n",
+    "\n",
+    "        Returns:\n",
+    "            float mean\n",
+    "        \"\"\"\n",
+    "        old_p = 0\n",
+    "        total = 0\n",
+    "        for x, new_p in zip(self.xs, self.ps):\n",
+    "            # compute dp\n",
+    "            p = new_p - old_p\n",
+    "            total += p * x\n",
+    "            old_p = new_p\n",
+    "        return total\n",
+    "    \n",
+    "    def ci(self, percentage=90) -> Tuple[float, float]:\n",
+    "        \"\"\"Computes the central credible interval.\n",
+    "\n",
+    "        If percentage=90, computes the 90% CI.\n",
+    "\n",
+    "        Args:\n",
+    "            percentage: float between 0 and 100\n",
+    "\n",
+    "        Returns:\n",
+    "            sequence of two floats, low and high\n",
+    "        \"\"\"\n",
+    "        prob = (1 - percentage / 100) / 2\n",
+    "        return self.value(prob), self.value(1 - prob)\n",
+    "    \n",
+    "    def items(self):\n",
+    "        \"\"\"\n",
+    "        Returns a sorted sequence of (value, probability) pairs.\n",
+    "        \"\"\"\n",
+    "        a = self.ps\n",
+    "        # shift probabilities one place to the right\n",
+    "        # e.g [0, 0.1, 0.2, 0.3] becomes [0.3, 0, 0.1, 0.2]\n",
+    "        b = np.roll(a, 1)\n",
+    "        b[0] = 0\n",
+    "        return zip(self.xs, a-b)\n",
+    "    \n",
     "    @property\n",
     "    def series(self) -> pd.Series:\n",
     "        '''\n",
     "        Return our value and cumulative probabilities as a pandas series\n",
     "        '''\n",
     "        return pd.Series(data=self.ps, index=self.xs)\n",
+    "    \n",
+    "    def copy(self):\n",
+    "        return self.__class__(self.xs.copy(), self.ps.copy())\n",
+    "    \n",
+    "    def compliment(self):\n",
+    "        '''\n",
+    "        Returns 1-CDF\n",
+    "        '''\n",
+    "        return self.__class__(self.xs.copy(), 1-self.ps)\n",
     "    \n",
     "    def as_dataframe(self) -> pd.DataFrame:\n",
     "        return pd.DataFrame(dict(\n",
@@ -802,7 +854,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdf.prob(41)"
+    "live.prglngth.mean()"
    ]
   },
   {
@@ -1051,6 +1103,13 @@
    "metadata": {},
    "source": [
     "This confirms that the random sample has the same distribution as the original data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Complimentary CDF"
    ]
   },
   {
