--- a/workshops/Reading_Stata_Dictionaries.ipynb
+++ b/workshops/Reading_Stata_Dictionaries.ipynb
@@ -298,20 +298,27 @@
     "class Column:\n",
     "    # start position\n",
     "    start: int\n",
-    "    # end position - we don't know this at first\n",
-    "    end: int = field(default=0, init=False)\n",
     "    # type of data\n",
     "    vtype: type\n",
     "    # name of the column\n",
     "    name: str\n",
-    "    fstring: str\n",
-    "    description: str = field(repr=False)\n",
+    "    # end position - we don't know this at first\n",
+    "    end: int = field(default=0)\n",
+    "    fstring: str = field(default=None, repr=False)\n",
+    "    description: str = field(default=None, repr=False)\n",
     "        \n",
     "    def col_spec(self, start_index=0) -> Tuple[int, int]:\n",
     "        '''\n",
     "        Returns the start and end positions, with possible correction for zero or one based start\n",
     "        '''\n",
-    "        return (self.start - start_index, self.end - start_index)"
+    "        return (self.start - start_index, self.end - start_index)\n",
+    "    \n",
+    "    @property\n",
+    "    def width(self) -> int:\n",
+    "        '''\n",
+    "        Returns the total width (in characters) of this column\n",
+    "        '''\n",
+    "        return (self.end - self.start) + 1"
    ]
   },
   {
@@ -342,8 +349,13 @@
     "    # get the three remaining values\n",
     "    vtype, name, fstring = line[s_start:s_end].split()\n",
     "    # return them\n",
-    "    return Column(position, TYPE_MAP.get(vtype, str), name, fstring, description)\n",
-    "    "
+    "    return Column(\n",
+    "        position,\n",
+    "        TYPE_MAP.get(vtype, str),\n",
+    "        name,\n",
+    "        fstring=fstring,\n",
+    "        description=description\n",
+    "    ) "
    ]
   },
   {
@@ -506,13 +518,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_fixed_width(dct_file: str, data_file: str, nrows=None) -> pd.DataFrame:\n",
+    "def read_fixed_width(data_file: str, col_into: List[Column], nrows=None) -> pd.DataFrame:\n",
     "    # options to pass to read_fwf\n",
     "    options = {'nrows': nrows}\n",
     "    # is it compressed\n",
     "    if data_file.endswith('.gz'):\n",
     "        options['compression'] = 'gzip'\n",
-    "    columns = read_stata_dictionary(dct_file)\n",
     "    # zero based indexing\n",
     "    index_base=1\n",
     "    col_specs = [c.col_spec(index_base) for c in columns]\n",
@@ -522,7 +533,10 @@
     "        colspecs=col_specs,\n",
     "        names=col_names,\n",
     "        **options\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "def read_stata_fixed_width(dct_file: str, data_file: str, nrows=None) -> pd.DataFrame:\n",
+    "    return read_fixed_width(data_file, read_stata_dictionary(dct_file), nrows)"
    ]
   },
   {
@@ -532,7 +546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_fixed_width(\n",
+    "df = read_stata_fixed_width(\n",
     "    '../data/2002FemResp.dct',\n",
     "    '../data/2002FemResp.dat.gz',\n",
     "    nrows=100\n",
@@ -585,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = fwf.read_fixed_width(\n",
+    "df = fwf.read_stata_fixed_width(\n",
     "    '../data/2002FemResp.dct',\n",
     "    '../data/2002FemResp.dat.gz'\n",
     ")"
